# cartographer

./: .bazelrc  .dockerignore  .gitignore  .travis.yml  AUTHORS  BUILD.bazel  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  Docker.reproduce  Dockerfile  Dockerfile.bionic  Dockerfile.bionic.grpc  Dockerfile.bullseye  Dockerfile.buster  Dockerfile.focal  Dockerfile.jammy  Dockerfile.jessie  Dockerfile.stretch  Dockerfile.trusty  Dockerfile.trusty.bazel  Dockerfile.xenial  README.md  README.rst  RELEASING.rst  WORKSPACE  azure-pipelines.yml  cartographer-config.cmake.in  package.xml  repositories.bzl  run_carto_main.sh
cartographer/: BUILD.bazel  CMakeLists.txt
cartographer/cartographer/: CMakeLists.txt
cartographer/cloud/: BUILD.bazel  map_builder_server_interface.cc  map_builder_server_interface.h  map_builder_server_main.cc  map_builder_server_options.cc  map_builder_server_options.h
cartographer/cmake/: functions.cmake
cartographer/common/: CMakeLists.txt  blocking_queue.h  blocking_queue_test.cc  config.h  config.h.cmake  configuration_dumper_main.cc  configuration_file_resolver.cc  configuration_file_resolver.h  configuration_files_test.cc  configuration_printer_main.cc  fixed_ratio_sampler.cc  fixed_ratio_sampler.h  fixed_ratio_sampler_test.cc  histogram.cc  histogram.h  interval.h  lockless_queue.h  lockless_queue_test.cc  lua_parameter_dictionary.cc  lua_parameter_dictionary.h  lua_parameter_dictionary_test.cc  lua_parameter_dictionary_test_helpers.h  make_unique.h  math.h  math_test.cc  mutex.h  optional.h  optional_test.cc  ordered_multi_queue.h  port.h  print_configuration_main.cc  rate_timer.h  rate_timer_test.cc  strict_flag.cc  strict_flag.h  task.cc  task.h  task_main.cc  task_test.cc  thread_pool.cc  (+7 more)
cartographer/configuration_files/: sparse_pose_graph.lua  trajectory_builder_3d.lua
cartographer/doc/: CMakeLists.txt
cartographer/evaluation/: environment_model.cc  environment_model.h  grid_drawer.cc  grid_drawer.h  lidar_simulator.cc  lidar_simulator.h  mapping_evaluation.cc  matplotlibcpp.h  scan_cloud_generator.cc  scan_cloud_generator.h  scan_matching_evaluation.cc  trajectory_builder_evaluation.cc
cartographer/ground_truth/: CMakeLists.txt  autogenerate_ground_truth.cc  autogenerate_ground_truth.h  autogenerate_ground_truth_main.cc  compute_relations_metrics_main.cc  relations_text_file.cc  relations_text_file.h
cartographer/io/: CMakeLists.txt  cairo_types.h  color.cc  color.h  coloring_points_processor.cc  coloring_points_processor.h  counting_points_processor.cc  counting_points_processor.h  draw_trajectories.cc  draw_trajectories.h  fake_file_writer.cc  fake_file_writer.h  fake_file_writer_test.cc  file.cc  file.h  file_writer.cc  file_writer.h  fixed_ratio_sampling_points_processor.cc  fixed_ratio_sampling_points_processor.h  follower_filtering_points_processor.cc  follower_filtering_points_processor.h  frame_id_filtering_points_processor.cc  frame_id_filtering_points_processor.h  hybrid_grid_points_processor.cc  hybrid_grid_points_processor.h  image.cc  image.h  image_points_processor.cc  image_points_processor.h  image_utils.cc  image_utils.h  in_memory_proto_stream.cc  in_memory_proto_stream.h  in_memory_proto_stream_test.cc  inmemory_proto_stream.cc  inmemory_proto_stream.h  inmemory_proto_stream_test.cc  intensity_to_color_points_processor.cc  intensity_to_color_points_processor.h  map_io.cc  (+55 more)
cartographer/kalman_filter/: CMakeLists.txt  gaussian_distribution.h  gaussian_distribution_test.cc  odometry_state_tracker.cc  pose_tracker.cc  pose_tracker.h  pose_tracker_test.cc  unscented_kalman_filter.h  unscented_kalman_filter_test.cc
cartographer/mapping/: CMakeLists.txt  collated_trajectory_builder.cc  collated_trajectory_builder.h  connected_components.cc  connected_components.h  connected_components_test.cc  detect_floors.cc  detect_floors.h  eigen_quaterniond_from_two_vectors.cc  global_trajectory_builder.h  global_trajectory_builder_interface.h  grid.h  grid_interface.h  id.h  id_test.cc  imu_based_pose_extrapolator.cc  imu_tracker.cc  imu_tracker.h  imu_tracker_test.cc  initial_trajectory_pose.cc  initial_trajectory_pose.h  local_slam_result_data.cc  local_slam_result_data.h  map_builder.cc  map_builder.h  map_builder_callbacks.h  map_builder_interface.cc  map_builder_interface.h  map_builder_test.cc  odometry_state_tracker.cc  odometry_state_tracker.h  pose_estimate.h  pose_extrapolator.cc  pose_extrapolator.h  pose_extrapolator_interface.cc  pose_extrapolator_interface.h  pose_extrapolator_test.cc  pose_graph.cc  pose_graph.h  pose_graph_data.cc  (+42 more)
cartographer/mapping_2d/: CMakeLists.txt  global_trajectory_builder.cc  global_trajectory_builder.h  laser_fan_inserter.cc  laser_fan_inserter.h  laser_fan_inserter_test.cc  local_trajectory_builder.cc  local_trajectory_builder.h  local_trajectory_builder_options.cc  local_trajectory_builder_options.h  local_trajectory_builder_options_2d.cc  local_trajectory_builder_options_2d.h  map_limits.h  map_limits_test.cc  pose_graph.cc  pose_graph.h  pose_graph_2d.cc  pose_graph_2d.h  pose_graph_2d_test.cc  pose_graph_test.cc  probability_grid.cc  probability_grid.h  probability_grid_test.cc  range_data_inserter.cc  range_data_inserter.h  range_data_inserter_2d.cc  range_data_inserter_2d.h  range_data_inserter_2d_test.cc  range_data_inserter_test.cc  ray_casting.cc  ray_casting.h  sparse_pose_graph.cc  sparse_pose_graph.h  sparse_pose_graph_test.cc  submap_2d.cc  submap_2d.h  submap_2d_test.cc  submaps.cc  submaps.h  submaps_test.cc  (+2 more)
cartographer/metrics/: counter.h  (+8 more)
cartographer_grpc/: BUILD.bazel  client_server_test.cc  data_uploader.cc  data_uploader.h  local_trajectory_uploader.cc  local_trajectory_uploader.h  map_builder_context.cc  map_builder_context.h  map_builder_context_interface.h  map_builder_server.cc  map_builder_server.h  map_builder_server_interface.cc  map_builder_server_interface.h  map_builder_server_main.cc  map_builder_server_options.cc  map_builder_server_options.h  mapping_server.cc  mapping_server.h  mapping_server_options.cc  mapping_server_options.h  uplink.cc  uplink.h
(+1431 files in other folders)
